<resources>
    <string name="app_name">Playlist maker</string>
    <string name="main_name">Playlist maker</string>
    <string name="first_button_text">Поиск</string>
    <string name="second_button_text">Медиатека</string>
    <string name="third_button_text">Настройки</string>
    <string name="settings_header_text">Настройки</string>
    <string name="menu_first_item_name">Темная тема</string>
    <string name="menu_second_item_name">Поделиться приложением</string>
    <string name="menu_third_item_name">Написать в поддержку</string>
    <string name="menu_fourth_item_name">Пользовательское соглашение</string>
    <string name="share_button_text">Поделиться ссылкой через</string>
    <string name="support_email">student_email@example.com</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="no_email_client">Почтовый клиент не найден</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_button_text">Выберите почтовое приложение</string>
    <string name="search_header_text">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="clear_icon_description">Очистить поле поиска</string>
    <string name="arrow_description">Стрелка направо</string>
    <string name="image_description">Изображение альбома</string>
    <string name="album_name">Yesterday (Remastered 2009)</string>
    <string name="group_name">The Beatles</string>
    <string name="track_length">2:55</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью.\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="yourHistoryMessage">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="Refresh">Обновить</string>
    <string name="default_time">0:00</string>
    <string name="duration">Длительность</string>
    <string name="duration_5_35">5:35</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="year_1965">1965</string>
    <string name="genre">Жанр</string>
    <string name="genre_rock">Rock</string>
    <string name="country">Страна</string>
    <string name="county_great_britain">Великобритания</string>
    <string name="default_time_0_00">0:00</string>
    <string name="mediateka_head_string">Медиатека</string>
    <string name="empty_mediateka_message">Ваша медиатека пуста</string>
    <string name="empty_playlists_message">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="tab_title_favorites">Избранные треки</string>
    <string name="tab_title_playlists">Плейлисты</string>

</resources>
