<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_screen_background_color"
    android:orientation="vertical"
    android:padding="0dp">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings_header_text"
        app:navigationIcon="@drawable/ic_arrowleft"
        style="@style/ToolbarStyle" />

    <!-- Свичер -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_option"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size_61"
        android:layout_marginTop="@dimen/default_size_24"
        android:text="@string/menu_first_item_name"
        style="@style/CustomSwitchMaterialStyle" />

    <!-- Второй пункт меню -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_item_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size_61"
        android:paddingStart="@dimen/default_size"
        android:paddingEnd="@dimen/setting_items_padding_end"
        android:text="@string/menu_second_item_name"
        app:drawableEndCompat="@drawable/ic_share"
        style="@style/SettingsMenuItemStyle" />

    <!-- Третий пункт меню -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_item_3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size_61"
        android:paddingStart="@dimen/default_size"
        android:paddingEnd="@dimen/setting_items_padding_end"
        android:text="@string/menu_third_item_name"
        app:drawableEndCompat="@drawable/ic_support"
        style="@style/SettingsMenuItemStyle" />

    <!-- Четвертый пункт меню -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_item_4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size_61"
        android:paddingStart="@dimen/default_size"
        android:paddingEnd="@dimen/setting_items_padding_end"
        android:text="@string/menu_fourth_item_name"
        app:drawableEndCompat="@drawable/ic_arrow"
        style="@style/SettingsMenuItemStyle" />

</LinearLayout>
