<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/createNewPlaylist"
        style="@style/SearchRefreshButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_size_24"
        android:text="@string/new_playlist"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/placeholderImage"
        android:layout_width="@dimen/default_size_120"
        android:layout_height="@dimen/default_size_120"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/empty_mediateka_message"
        app:layout_constraintTop_toBottomOf="@id/createNewPlaylist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/nothing_found" />

    <TextView
        android:id="@+id/placeholderMessage"
        android:text="@string/empty_playlists_message"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/placeholderImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/default_size_16"
        android:fontFamily="@font/ys_display_medium"
        android:lineHeight="@dimen/default_text_size_2227"
        android:textSize="19sp"
        android:textColor="@color/placeholderMessage_color" />

</androidx.constraintlayout.widget.ConstraintLayout>