<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingStart="@dimen/default_size"
    android:paddingEnd="@dimen/default_size"
    android:paddingBottom="28dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/yandex_sans_text_medium"
        android:paddingTop="14dp"
        android:paddingBottom="@dimen/default_size"
        />

    <Button
        android:id="@+id/button_1"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/first_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/yandex_sans_text_medium"
        android:textColor="@color/buttons_content_black"
        app:icon="@drawable/ic_loupe"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPadding_10dp"
        app:iconTint="@color/buttons_content_black"
        app:cornerRadius="@dimen/default_size"
        />

    <Button
        android:id="@+id/button_2"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="@dimen/default_size"
        android:backgroundTint="@color/white"
        android:text="@string/second_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/yandex_sans_text_medium"
        android:textColor="@color/buttons_content_black"
        app:icon="@drawable/ic_light_mode"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPadding_10dp"
        app:iconTint="@color/buttons_content_black"
        app:cornerRadius="@dimen/default_size"
        />

    <Button
        android:id="@+id/button_3"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/third_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/yandex_sans_text_medium"
        android:textColor="@color/buttons_content_black"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPadding_10dp"
        app:iconTint="@color/buttons_content_black"
        app:cornerRadius="@dimen/default_size"
        />

</LinearLayout>
